feat: finish project and add instructions